<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.appconstatisticsapi.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingRight="8dp"
            android:text="@string/label_current_state"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            tools:text="Playing" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingRight="8dp"
            android:text="@string/label_position"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            tools:text="0.0" />
    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1000"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:progress="0"
        android:id="@+id/seekBar"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:columnCount="2"
        android:columnWidth="50dp"
        android:gravity="center"
        android:horizontalSpacing="5dp"
        android:verticalSpacing="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleStatusChange"
            android:tag="@string/state_playing"
            android:text="@string/state_playing" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleStatusChange"
            android:tag="@string/state_stopped"
            android:text="@string/state_stopped" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleStatusChange"
            android:tag="@string/state_buffering"
            android:text="@string/state_buffering" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleStatusChange"
            android:tag="@string/state_completed"
            android:text="@string/state_completed" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleStatusChange"
            android:tag="@string/state_media_error"
            android:text="@string/state_media_error" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="handleStatusChange"
            android:tag="@string/state_security_error"
            android:text="@string/state_security_error" />

    </GridLayout>
</LinearLayout>

